--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -5,7 +5,7 @@
     outline: none;
 }
 html{
-    font-size: '62.5%';
+    font-size: '64.2%';
 }
 body{
     
@@ -15,7 +15,7 @@ body{
 .home{
     min-width: 70rem;
     height: 100vh;
-    background-image: url('images/photo-beach-town-view-from.jpg');
+    background-image: url('Images/Background.jpg');
     background-size: cover;
 }
 nav{
@@ -45,7 +45,7 @@ nav .logo{
     text-decoration: none;
     color: white;
     margin-left: 5rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Times, "Times New Roman", Georgia, serif;
     font-size: 1rem;
     font-weight: 600;
    
