--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -5,7 +5,7 @@
     outline: none;
 }
 html{
-    font-size: '64.2%';
+    font-size: '63.5%';
 }
 body{
     
@@ -167,7 +167,7 @@ color: white;
     min-width: 70rem;
     height: 100vh;
     position: relative;
-    background-image: url('images/photo-beach-town-view-from.jpg');
+    background-image: url('Images/Background.jpg');
     background-size: cover; 
     
 
@@ -251,7 +251,7 @@ color: rgb(217, 211, 211);
     min-width: 70rem;
     height: 100vh;
     position: relative;
-    background-image: url('images/photo-beach-town-view-from.jpg');
+    background-image: url('Images/Background.jpg');
     background-size: cover; 
 }
 .contact-container{
