--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -15,7 +15,7 @@ body{
 .home{
     min-width: 70rem;
     height: 100vh;
-    background-image: url('Images/Background.jpg');
+    background-image: url('Images/trees.jpg');
     background-size: cover;
 }
 nav{
@@ -167,7 +167,7 @@ color: white;
     min-width: 70rem;
     height: 100vh;
     position: relative;
-    background-image: url('Images/Background.jpg');
+    background-image: url('Images/trees.jpg');
     background-size: cover; 
     
 
@@ -251,7 +251,7 @@ color: rgb(217, 211, 211);
     min-width: 70rem;
     height: 100vh;
     position: relative;
-    background-image: url('Images/Background.jpg');
+    background-image: url('Images/trees.jpg');
     background-size: cover; 
 }
 .contact-container{
