--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -7,10 +7,7 @@
 html{
     font-size: '62.5%';
 }
-body{
 
-    
-}
 .home{
     min-width: 70rem;
     height: 100vh;
@@ -42,7 +39,7 @@ nav .logo{
 }
 .menu a{
     text-decoration: none;
-    color: white;
+    color: rgb(213, 224, 94);
     margin-left: 5rem;
     font-family: Times, "Times New Roman", Georgia, serif;
     font-size: 1rem;
@@ -50,9 +47,7 @@ nav .logo{
    
 
 }
-.search{
-     
-}
+
 input{
     min-width: 25rem;
     padding: 0.9rem 0.5rem;
@@ -92,10 +87,9 @@ input{
    
     display: flex;
     flex-direction: row;
-    background-color: rgb(136, 211, 232,0.6);
+    background-color: rgba(97, 196, 224, 0.6);
     background-blend-mode:multiply;
     background-size: cover;
-    
     
     
 }
@@ -116,7 +110,7 @@ input{
 .right .vertical{
     position: relative;
     top: 5rem;
-    border-left: 0.2rem solid white;
+    border-left: 0.2rem solid rgb(240, 209, 99);
     height: 10rem;
     left: 0.9rem;
 }
@@ -140,14 +134,14 @@ color: white;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 0.5rem;
-    background-color: rgb(0, 0, 0,0.3);
+    background-color: rgba(141, 174, 232, 0.3);
     line-height: 20px;
     border-radius: 0.3rem;
 }
 .center button{
     
     padding: 0.6rem;
-    background-color: rgb(1, 200, 255);
+    background-color: rgb(46, 216, 225);
     color: white;
     border-radius: 0.3rem;
     font-weight: 600;
@@ -155,7 +149,7 @@ color: white;
 .about-container{
     min-width: 70rem;
     height: 100vh;
-    background-color: rgb(136, 211, 232,0.6);
+    background-color: rgba(157, 208, 222, 0);
     
 }
 .about{
@@ -178,7 +172,7 @@ color: white;
     left: 14rem;
 }
 .aboutTop h1{
-    color: white;
+    color: rgb(225, 168, 236);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3.5rem;
     
@@ -188,7 +182,7 @@ color: white;
     position: relative;
     color: white;
     padding: 0.5rem;
-    background-color: rgb(0, 0, 0,0.3);
+    background-color: rgba(215, 208, 181, 0);
     line-height: 20px;
     border-radius: 0.5rem;
 
@@ -203,7 +197,7 @@ color: white;
 }
 .aboutBottom h1{
     position: absolute;
-    color: white;
+    color: rgb(125, 229, 198);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3.5rem;
     top: -5rem;
@@ -261,7 +255,7 @@ color: rgb(217, 211, 211);
     position: relative;
     left : 17rem;
     top: -100px;
-    color: white;
+    color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 3.5rem;
 }
@@ -311,7 +305,7 @@ color: rgb(217, 211, 211);
        border-radius: 8px;
        padding: 16px;
        margin: 8px;
-       width: 200px;
+       width: 250px;
        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
        background-color: white;
       
